--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/abhijith-ram-p/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/ABHIJITHRAMP">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.instagram.com/p_abhijith_ram/">Website</a>
       <p class="copyright">© Abhijith Ram P.</p>
     </div>
 
