--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="photo"  src="images/photo.png" alt="">
+        <img class="photo"  src="images/AbhijithRam.jpg" alt="">
         <h2>Hello.</h2>
         <p class ="intro">I am a Web Developer. I'm a student at Cochin University Of Science And Technology. I ❤️ tech and cars.</p>
       </div>
